# sample-repo-helix-pylsp

./: README.md  languages.toml  pyproject.toml  python.nix
src/sample/: say_foo.py  say_foo_loudly.py
test/: test_say_foo.py
