[tool.poetry]
name = "sample-repo"
version = "0.1.0"
description = ""
authors = ["Matt Rixman <MatrixManAtYrService@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sample", from = "src"}]



[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
